# ksubst-rs

./: .gitignore  COPYRIGHT  Cargo.toml  README.md  env.assets  main.rs
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/workflows/: release.yml  rust.yml
assets/: foo.yaml
assets/nested/: foo.ts  foo.yaml
docs/: development.md  release-notes.md
examples/: basic.rs
src/: lib.rs
